tests/requests/invalid/rfc9110_trailer_forbidden_cl_01.http
POST /p HTTP/1.1\r\n
Host: example.com\r\n
Transfer-Encoding: chunked\r\n
\r\n
5\r\n
hello\r\n
0\r\n
Content-Length: 99\r\n
\r\n
